--- a/auth/package.json
+++ b/auth/package.json
@@ -11,8 +11,11 @@
   "description": "",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.96",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "express-validator": "^7.2.0",
+    "mongoose": "^8.6.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
   }
