--- a/auth/package.json
+++ b/auth/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@typegoose/typegoose": "^12.7.0",
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.96",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.2.0",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
