--- a/auth/package.json
+++ b/auth/package.json
@@ -11,8 +11,10 @@
   "description": "",
   "dependencies": {
     "@typegoose/typegoose": "^12.7.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.96",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.2.0",
