--- a/auth/package.json
+++ b/auth/package.json
@@ -15,12 +15,18 @@
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.96",
     "bcrypt": "^5.1.1",
+    "cookie-session": "^2.1.0",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@types/cookie-session": "^2.0.49",
+    "@types/jsonwebtoken": "^9.0.6"
   }
 }
